# nif-extractous

./: .gitignore  Cargo.toml  README.md  mix.exs
.github/actions/build_rs/: action.yml  build.sh
.github/workflows/: release.yaml
lib/: nif_extractous.exs
lib/nif_extractous/: native.ex  native.exs
native/nif_extractous/: Cargo.toml  Cross.toml  README.md
native/nif_extractous/.cargo/: config.toml
native/nif_extractous/src/: lib.rs
native/nifextractous/: Cargo.toml  README.md
native/nifextractous/src/: lib.rs
