[package]
name = "nif_extractous"
version = "0.5.1"
authors = []
edition = "2021"

[lib]
name = "nif_extractous"
crate-type = ["cdylib"]

[dependencies]
extractous = "0.3.0"
rustler = { version = "0.36", default-features = false, features = ["derive", "nif_version_2_17"] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
